refactor: improve UI
- basically make it 2x time bigger
- and the 4 question queries become a dropdown

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <!-- FIX: Use correct package name -->
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                     <mainClass>com.k1en.MainApp</mainClass>
                 </configuration>
             </plugin>
